# slate

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  Taskfile.dist.yml  overlay-debug.conf  prj.conf  sections-rom.ld
boards/: rpi_pico2_rp2350a_m33.overlay  rpi_pico2_rp2350a_m33_w.overlay
include/slate/: config.h  display.h  serial_handler.h  serial_master.h  shell.h  wifi.h  wifi_config.h  zbus.h
src/: main.c  shell.c
src/communications/: serial_handler.c  websocket_bridge.c
src/config/: nvs_storage.c  wifi_config.c
src/display/: display.c  icons_font.c
src/network/: wifi.c
